--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -4,15 +4,25 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-content padding id="forgot">
+  <img src="assets/imgs/logo.png" class="navLogo" />
 
-  <ion-navbar>
-    <ion-title>forgotPassword</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+  <form [formGroup]="forgotGroup" (ngSubmit)="showLogin()">
+    <ion-item>
+      <ion-label>Username :</ion-label>
+      <ion-input type="text" formControlName="username"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Password :</ion-label>
+      <ion-input type="password" formControlName="password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Confirm Password :</ion-label>
+      <ion-input type="password" formControlName="confirmPass"></ion-input>
+    </ion-item><br>
+    <div class="changePassBtn">
+      <button ion-button color="dark" type="submit">Change Password</button>
+      <a ion-button color="secondary" (click)="showLogin()">Login</a>
+    </div>
+  </form>
 </ion-content>
