--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -4,16 +4,44 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-content padding id="register">
+  <img src="assets/imgs/logo.png" class="navLogo" />
 
-  <ion-navbar>
-    <img src="assets/imgs/logo.png" class="navLogo" />
-    <ion-title>Register</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
+  <form [formGroup]="registerGroup" (ngSubmit)="showDashboard()">
+    <ion-item>
+      <ion-label>Full Name :</ion-label>
+      <ion-input type="text" formControlName="fullname"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Username :</ion-label>
+      <ion-input type="text" formControlName="username"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Email :</ion-label>
+      <ion-input type="email" formControlName="email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Password :</ion-label>
+      <ion-input type="password" formControlName="password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Confirm Password :</ion-label>
+      <ion-input type="password" formControlName="confirmPass"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Phone Number :</ion-label>
+      <ion-input type="number" formControlName="phone"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Date :</ion-label>
+      <ion-datetime displayFormat="MM/DD/YYYY" formControlName="date" [(ngModel)]="myDate"></ion-datetime>
+    </ion-item>
+    <br>
+    <div class="registerBtn">
+      <button ion-button color="dark" type="submit">Register</button>
+      <a ion-button color="secondary" (click)="showLogin()">Login</a>
+    </div>
+  </form>
 
 </ion-content>
+
