--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,9 @@
-<ion-tabs selectedIndex="2">
+<ion-tabs [selectedIndex]="myIndex">
+  <ion-tab [root]="profileRoot" tabTitle="profile"></ion-tab>
+  <ion-tab [root]="settingsRoot" tabTitle="settings"></ion-tab>
+  <ion-tab [root]="feedbackRoot" tabTitle="feedback"></ion-tab>
+  <ion-tab [root]="faqRoot" tabTitle="FAQs"></ion-tab>
+
   <ion-tab [root]="shopRoot" tabTitle="Shop" tabIcon="cart"></ion-tab>
   <ion-tab [root]="budgetRoot" tabTitle="Budget" tabIcon="logo-usd"></ion-tab>
   <ion-tab [root]="homeRoot" tabTitle="Home" tabIcon="home"></ion-tab>
