--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs [selectedIndex]="myIndex">
+<ion-tabs selectedIndex="6">
   <ion-tab [root]="profileRoot" tabTitle="profile"></ion-tab>
   <ion-tab [root]="settingsRoot" tabTitle="settings"></ion-tab>
   <ion-tab [root]="feedbackRoot" tabTitle="feedback"></ion-tab>
