--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -2,8 +2,9 @@
 
 <ion-content padding>
   <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+<br><br><br><br><br>
+  <p>hi</p>
+  <li *ngFor="let user of profile">
+    {{user["name"]}}
+  </li>
 </ion-content>
