--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,10 +1,58 @@
 <header pageTitle="Profile"></header>
 
-<ion-content padding>
+<ion-content padding *ngFor="let user of profile">
   <h3>Ionic Menu Starter</h3>
-<br><br><br><br><br>
-  <p>hi</p>
-  <li *ngFor="let user of profile">
-    {{user["name"]}}
-  </li>
+<br><br><br>
+ <ion-grid>
+   <ion-row text-center>
+     <ion-col col-12>
+       <img width="80" height="80" src="assets/imgs/user-logo.png">
+     </ion-col>
+     <ion-col col-12>
+       <h1>{{user["name"]}}</h1>
+     </ion-col>
+   </ion-row>
+   <ion-row text-center>
+     <ion-col ion-text col-3>
+        Email
+     </ion-col>
+     <ion-col col-9>
+       {{currUser.email}}
+     </ion-col>
+   </ion-row>
+   <ion-row text-center>
+     <ion-col col-3>
+       Password
+     </ion-col>
+     <ion-col col-9>
+       *******
+     </ion-col>
+   </ion-row>
+   <ion-row text-center>
+     <ion-col col-3>
+       Phone
+     </ion-col>
+     <ion-col col-9>
+       {{user.phone}}
+     </ion-col>
+   </ion-row>
+   <ion-row text-center>
+     <ion-col col-3>
+       DOB
+     </ion-col>
+     <ion-col col-9>
+       {{user.dob}}
+     </ion-col>
+   </ion-row>
+   <ion-row text-center>
+     <ion-col col-12>
+       <button ion-button (click)="editProfile()">Edit</button>
+     </ion-col>
+   </ion-row>
+   <ion-row text-center>
+     <ion-col col-12>
+       <button ion-button color="danger">Delete Account</button>
+     </ion-col>
+   </ion-row>
+ </ion-grid>
 </ion-content>
