Chat page design created

--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -2,3 +2,10 @@
 <ion-content padding>
 
 </ion-content>
+
+<ion-footer>
+    <ion-input type="text" [(ngModel)]="message" placeholder="Type here..."></ion-input>
+    <button ion-button icon-only (click)="sendMessage()">
+      <ion-icon name="send"></ion-icon>
+    </button>
+</ion-footer>
