--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -1,7 +1,6 @@
 <header pageTitle="Edit Profile" edit="true"></header>
 
-<ion-content>
-  <br><br><br>
+<ion-content padding id="editProfile">
   <form>
     <ion-grid>
       <ion-row text-center>
