--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -6,7 +6,7 @@
 -->
 <ion-content padding id="forgot">
   <img src="assets/imgs/logo.png" class="navLogo" />
-
+  <h1> Forgot Password</h1>
   <form [formGroup]="forgotGroup" (ngSubmit)="showLogin()">
     <ion-item>
       <ion-label>Username :</ion-label>
