--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,7 +6,7 @@
 -->
 <ion-content padding id="register">
   <img src="assets/imgs/logo.png" class="navLogo" />
-
+  <h1> Account Registration</h1>
   <form>
     <ion-item>
       <ion-label>Full Name :</ion-label>
