--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,8 +1,6 @@
 <header pageTitle="Profile"></header>
 
-<ion-content padding *ngFor="let user of profile">
-  <h3>Ionic Menu Starter</h3>
-<br><br><br>
+<ion-content padding *ngFor="let user of profile" id="profile">
  <ion-grid>
    <ion-row text-center>
      <ion-col col-12>
@@ -12,43 +10,43 @@
        <h1>{{user["name"]}}</h1>
      </ion-col>
    </ion-row>
-   <ion-row text-center>
-     <ion-col ion-text col-3>
-       Username
+   <ion-row text-left>
+     <ion-col ion-text col-5>
+       Username:
      </ion-col>
-     <ion-col col-9>
+     <ion-col col-7>
        {{user.username}}
      </ion-col>
    </ion-row>
-   <ion-row text-center>
-     <ion-col ion-text col-3>
-        Email
+   <ion-row text-left>
+     <ion-col ion-text col-5>
+        Email:
      </ion-col>
-     <ion-col col-9>
+     <ion-col col-7>
        {{currUser.email}}
      </ion-col>
    </ion-row>
-   <ion-row text-center>
-     <ion-col col-3>
-       Password
+   <ion-row text-left>
+     <ion-col col-5>
+       Password:
      </ion-col>
-     <ion-col col-9>
-       *******
+     <ion-col col-7>
+       *********
      </ion-col>
    </ion-row>
-   <ion-row text-center>
-     <ion-col col-3>
-       Phone
+   <ion-row text-left>
+     <ion-col col-5>
+       Phone Number:
      </ion-col>
-     <ion-col col-9>
+     <ion-col col-7>
        {{user.phone}}
      </ion-col>
    </ion-row>
-   <ion-row text-center>
-     <ion-col col-3>
-       DOB
+   <ion-row text-left>
+     <ion-col col-5>
+       Date of Birth:
      </ion-col>
-     <ion-col col-9>
+     <ion-col col-7>
        {{user.dob}}
      </ion-col>
    </ion-row>
