login and forgot password page validation is done

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,15 +10,18 @@
   <img src="assets/imgs/logo.png" class="navLogo" />
   <h1> Welcome to Raduno</h1>
 
-  <form>
+  <form [formGroup]="loginGroup">
     <ion-item>
       <ion-label>Email :</ion-label>
-      <ion-input name="email" type="email" [(ngModel)]="user.email"></ion-input>
+      <ion-input formControlName="email" type="email" [(ngModel)]="user.email"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!email.valid && email.touched">*Email is required</div>
     <ion-item>
       <ion-label>Password :</ion-label>
-      <ion-input name="password" type="password" [(ngModel)]="user.password"></ion-input>
-    </ion-item> <br>
+      <ion-input formControlName="password" type="password" [(ngModel)]="user.password"></ion-input>
+    </ion-item>
+    <div  class="danger" *ngIf="!password.valid && password.touched">*You must specify valid password between 6 to 15 characters long</div>
+    <br>
     <div class="loginBtn">
       <button ion-button block color="dark" (click)="login(user)">Login</button>
     </div>
