--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -7,21 +7,25 @@
 <ion-content padding id="forgot">
   <img src="assets/imgs/logo.png" class="navLogo" />
   <h1> Forgot Password</h1>
-  <form [formGroup]="forgotGroup" (ngSubmit)="showLogin()">
+  <form [formGroup]="forgotGroup">
     <ion-item>
       <ion-label>Username :</ion-label>
       <ion-input type="text" formControlName="username"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!username.valid && username.touched">*Username is required</div>
     <ion-item>
-      <ion-label>Password :</ion-label>
+      <ion-label>New Password :</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!password.valid && password.touched">*You must specify password between 6 to 15 characters long</div>
     <ion-item>
       <ion-label>Confirm Password :</ion-label>
       <ion-input type="password" formControlName="confirmPass"></ion-input>
-    </ion-item><br>
+    </ion-item>
+    <div  class="danger" *ngIf="!confirmPass.valid && confirmPass.touched">*You must specify password between 6 to 15 characters long</div>
+    <br>
     <div class="changePassBtn">
-      <button ion-button color="dark" type="submit">Change Password</button>
+      <button ion-button color="dark" (click)="showLogin()" >Change Password</button>
       <a ion-button color="secondary" (click)="showLogin()">Login</a>
     </div>
   </form>
