--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,11 @@
 
 <header pageTitle="Dashboard"></header>
-<ion-content padding></ion-content>
+<ion-content padding>
+  <ion-fab>
+    <button ion-fab color="primary" (click)="gotoEventPage()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
+</ion-content>
 
 
