--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -8,7 +8,7 @@
   <img src="assets/imgs/logo.png" class="navLogo" />
   <h1> Account Registration</h1>
   <form [formGroup]="registerFormGroup">
-    <ion-item pa>
+    <ion-item>
       <ion-label>Full Name :</ion-label>
       <ion-input formControlName="fname" [(ngModel)]="profile.name" type="text"></ion-input>
     </ion-item>
