check pending invitees

--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,6 +1,13 @@
 <header pageTitle="Chat"></header>
 <ion-content padding>
-
+  <br><br><br>
+  <ion-item>
+    <ion-label>Gender</ion-label>
+    <ion-select [(ngModel)]="eventList">
+      <ion-option value="f">Female</ion-option>
+      <ion-option value="m">Male</ion-option>
+    </ion-select>
+  </ion-item>
 </ion-content>
 
 <ion-footer>
