--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,11 @@
 
 <header pageTitle="Dashboard"></header>
 <ion-content padding>
+  <ion-list>
+      <ion-item>
+
+      </ion-item>
+  </ion-list>
   <ion-fab>
     <button ion-fab color="primary" (click)="gotoEventPage()">
       <ion-icon name="add"></ion-icon>
