--- a/src/pages/view-event/view-event.html
+++ b/src/pages/view-event/view-event.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the ViewEventPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>view-event</ion-title>
+    <ion-title>Event Details</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +9,43 @@
 
 <ion-content padding>
 
+  <ion-grid>
+    <ion-row text-center>
+      <ion-col col-12 *ngIf="picData;else other_content">
+        <img width="80" height="80" src="{{ picData }}">
+      </ion-col>
+      <ng-template #other_content>
+        <ion-col col-12>
+          <img width="80" height="80" src="assets/imgs/logo.png">
+        </ion-col>
+      </ng-template>
+      <ion-col col-12>
+        <h1>{{currEvent["title"]}}</h1>
+      </ion-col>
+    </ion-row>
+    <ion-row text-left>
+      <ion-col ion-text col-5>
+        Hosted By:
+      </ion-col>
+      <ion-col col-7>
+        {{hostUser["name"]}}
+      </ion-col>
+    </ion-row>
+    <ion-row text-left>
+      <ion-col ion-text col-5>
+        Location:
+      </ion-col>
+      <ion-col col-7>
+        {{currEvent["location"]}}
+      </ion-col>
+    </ion-row>
+    <ion-row text-left>
+      <ion-col col-5>
+        Date and Time:
+      </ion-col>
+      <ion-col col-7>
+        {{currEvent["date"]}}
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
