--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -2,12 +2,30 @@
 
 <ion-content padding>
   <br><br><br>
-  {{hostedEvents}}
-  <ion-item *ngFor="let e of hostedEvents">
-    {{e["title"]}}
-    <ion-label>Events</ion-label>
-    <!--<ion-select [(ngModel)]="selectedEvent">-->
-      <!--<ion-option *ngIf="e.budget > 0" value="f">{{e["title"]}}</ion-option>-->
-    <!--</ion-select>-->
+  <ng-template #content>
+    No hosted events with budget
+  </ng-template>
+  <ion-item *ngIf="hostedEvents.length>0; else content">
+    <ion-select  [(ngModel)]="selectedEventKey" (ngModelChange)="selectEventForBudget()">
+      <ion-option selected disabled>No event selected</ion-option>
+      <div *ngFor="let ev of hostedEvents">
+        <ion-option [value]="ev.key">{{ev["title"]}}</ion-option>
+      </div>
+    </ion-select>
   </ion-item>
+  <ion-grid *ngIf="selectedEvent.budget">
+    <ion-row>
+      <ion-col col-8>
+        Total Budget:
+      </ion-col>
+      <ion-col col-4>
+        ${{selectedEvent["budget"]}}
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-fab>
+    <button ion-fab color="primary" (click)="presentAddExpenseModal()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
