--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -25,7 +25,7 @@
     <div  class="danger" *ngIf="!confirmPass.valid && confirmPass.touched">*You must specify password between 6 to 15 characters long</div>
     <br>
     <div class="changePassBtn">
-      <button ion-button color="dark" (click)="showLogin()" >Change Password</button>
+      <button ion-button color="dark">Change Password</button>
       <a ion-button color="secondary" (click)="showLogin()">Login</a>
     </div>
   </form>
