greeting page started

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
-  <script src="assets/fabric.min.js"></script>
+  <script src="assets/js/fabric.min.js"></script>
 
 </body>
 </html>
