--- a/src/pages/greeting/greeting.html
+++ b/src/pages/greeting/greeting.html
@@ -1,17 +1,43 @@
 <header pageTitle="Greeting"></header>
 
 <ion-content id="greeting" padding>
-  <div>
-    <ion-select [(ngModel)]="selectedFontFamily" (ngModelChange)="getSelectedFontFamily()">
-      <ion-option  selected>Select</ion-option>
-      <ion-option [value]="item" *ngFor="let item of fontFamily">{{item}}</ion-option>
+  <!--<div class="row">-->
+    <!--<ion-select [(ngModel)]="selectedFontColor" (ngModelChange)="getSelectedFontColor()">-->
+      <!--<ion-option  selected>Select FontColor</ion-option>-->
+      <!--<div *ngFor="let color of colors">-->
+        <!--<ion-option [value]="color.colorCode">{{color.colorName}}</ion-option>-->
+      <!--</div>-->
+    <!--</ion-select>-->
+  <!--</div>-->
+
+  <div class="row">
+    <ion-select [(ngModel)]="selectedBackColor" (ngModelChange)="getSelectedBackColor()">
+      <ion-option  selected>Select Background Color</ion-option>
+      <div *ngFor="let color of colors">
+        <ion-option [value]="color.colorCode">{{color.colorName}}</ion-option>
+      </div>
     </ion-select>
   </div>
-  <div fxLayout="row">
-    <canvas id="canvas" width="300" height="250" style="border: 1px solid #ccc"></canvas>
-  </div>
-  <button ion-button  color="light" (click)="addText()">T</button>
-  <button ion-button color="light" ><ion-icon name="md-images"></ion-icon></button>
 
+  <div class="row">
+    <ion-select [(ngModel)]="selectedFontFamily" (ngModelChange)="getSelectedFontFamily()">
+      <ion-option  selected>Select FontFamily</ion-option>
+      <div *ngFor="let item of fontFamily">
+        <ion-option [value]="item">{{item}}</ion-option>
+      </div>
+    </ion-select>
+  </div>
+  <div>
+    <canvas id="canvas" width="350" height="250" style="border: 1px solid #ccc"></canvas>
+  </div>
+  <img src="" id="img"/>
+  <button ion-button  color="light" (click)="addText()">T</button>
+  <button ion-button color="light" ><ion-icon name="md-images" (click)="getMedia()"></ion-icon></button>
+  <button ion-button color="light" ><ion-icon name="md-trash" (click)="removeText()"></ion-icon></button>
+  <button ion-button color="light" (click)="clearCanvasBackground()">Clear Background</button>
+
+  <div text-center>
+    <button  ion-button  color="primary" (click)="saveGreeting()" type="submit">Save</button>
+  </div>
 </ion-content>
 
