--- a/src/pages/fa-qs/fa-qs.html
+++ b/src/pages/fa-qs/fa-qs.html
@@ -2,10 +2,13 @@
 
 <ion-content padding>
   <br><br><br>
-    <div *ngFor="let q of faqChat">
-      <p text-right>{{ q["question"] }}</p>
-      <p text-left>{{ q["answer"] }}</p>
+  <div id="chatMessages">
+    <div class="message" *ngFor="let q of faqChat">
+      <div class="innerMessage messageRight">{{ q["question"] }}</div>
+      <br>
+      <div class="innerMessage messageLeft">{{ q["answer"] }}</div>
     </div>
+  </div>
 </ion-content>
 
 <ion-footer>
