default greeting page completed

--- a/src/pages/greeting/greeting.html
+++ b/src/pages/greeting/greeting.html
@@ -37,7 +37,8 @@
   <button ion-button color="light" (click)="clearCanvasBackground()">Clear Background</button>
 
   <div text-center>
-    <button  ion-button  color="primary" (click)="saveGreeting()" type="submit">Save</button>
+    <button  ion-button  color="primary" (click)="useDefaultGreeting()" type="submit">Use Default</button>
+    <button  ion-button  color="primary" (click)="saveGreeting()" type="submit">Save and Next</button>
   </div>
 </ion-content>
 
