--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -6,7 +6,7 @@
       <ion-label>Event Title: </ion-label>
       <ion-input type="text" formControlName="title" [(ngModel)]="title"></ion-input>
     </ion-item>
-    <div class="danger" *ngIf="!EventFormGroup.controls['title'].valid && EventFormGroup.controls['title'].touched">*Valid title is required and max 30 characters long</div>
+    <div class="danger" *ngIf="!EventFormGroup.controls['title'].valid && EventFormGroup.controls['title'].touched">*Valid title is required and min 5 characters long</div>
     <ion-item>
       <ion-label>Date and Time: </ion-label>
       <ion-datetime displayFormat="MMM DD, YYYYTh:mm A" min="2018" pickerFormat="MMM DD YY h:mm A"  formControlName="date" [(ngModel)]="date"></ion-datetime>
