--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,6 +2,17 @@
 <header pageTitle="Dashboard"></header>
 <ion-content padding>
   <br><br><br>
+  <ion-slides>
+    <ion-slide>
+      <h1>Welcome to Raduno</h1>
+    </ion-slide>
+    <ion-slide>
+      <h1>the one stop solution</h1>
+    </ion-slide>
+    <ion-slide>
+      <h1>for planning events and parties</h1>
+    </ion-slide>
+  </ion-slides>
   <ion-list *ngFor="let pendingEvent of pendingEvents">
     <ion-item>
       <ion-thumbnail item-start>
