--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -1,5 +1,25 @@
 <header pageTitle="Calendar"></header>
+<ion-title>Calendar</ion-title>
+<ion-content padding id="calendar">
 
-<ion-content padding>
+  <ion-calendar #calendar  (onDaySelect)="onDaySelect($event)" ></ion-calendar>
+
+  <button ion-button id="today-btn" small ion-button (click)="calendar.today()">Jump to Today</button>
+
+  <ion-item >
+    <ion-list (ngModelChange)="getHostedEventsForChat()">
+      <div *ngFor="let lev of listedEvents">
+        <div>
+          <button ion-item (click)="moveToEventPreview()" [value]="lev.key">
+            {{lev["title"]}}{{lev["date"]}}
+          </button>
+        </div>
+        <ng-template #unselectedOption>
+          <ion-option [value]="lev.key">{{lev["title"]}}</ion-option>
+        </ng-template>
+      </div>
+
+    </ion-list>
+  </ion-item>
 
 </ion-content>
