--- a/src/pages/event-summary/event-summary.html
+++ b/src/pages/event-summary/event-summary.html
@@ -1,18 +1,18 @@
-<!--
-  Generated template for the EventSummaryPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>eventSummary</ion-title>
+    <ion-title>Event Summary</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-img width="330" height="250" src="{{ image }}"></ion-img>
+
+  <div text-center>
+    <button  ion-button  color="primary" (click)="saveGreeting()" type="submit">Confirm & Send</button>
+  </div>
 
 </ion-content>
