--- a/src/pages/view-event/view-event.html
+++ b/src/pages/view-event/view-event.html
@@ -16,7 +16,7 @@
       </ion-col>
       <ng-template #other_content>
         <ion-col col-12>
-          <img width="80" height="80" src="assets/imgs/logo.png">
+          <img width="220" src="{{currEvent['greetingCard']}}">
         </ion-col>
       </ng-template>
       <ion-col col-12>
