--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -1,18 +1,12 @@
-<!--
-  Generated template for the ForgotPasswordPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-content padding id="forgot">
   <img src="assets/imgs/logo.png" class="navLogo" />
   <h1> Forgot Password</h1>
   <form [formGroup]="forgotGroup">
     <ion-item>
-      <ion-label>Username :</ion-label>
-      <ion-input type="text" formControlName="username"></ion-input>
+      <ion-label>Email :</ion-label>
+      <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
-    <div  class="danger" *ngIf="!username.valid && username.touched">*Username is required</div>
+    <div  class="danger" *ngIf="!email.valid && email.touched">*Username is required</div>
     <ion-item>
       <ion-label>New Password :</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
