--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -3,23 +3,23 @@
   <h1> Forgot Password</h1>
   <form [formGroup]="forgotGroup">
     <ion-item>
-      <ion-label>Email :</ion-label>
-      <ion-input type="text" formControlName="email"></ion-input>
+      <ion-label>New Email :</ion-label>
+      <ion-input name="email" type="email" formControlName="email"></ion-input>
     </ion-item>
-    <div  class="danger" *ngIf="!email.valid && email.touched">*Username is required</div>
-    <ion-item>
-      <ion-label>New Password :</ion-label>
-      <ion-input type="password" formControlName="password"></ion-input>
-    </ion-item>
-    <div  class="danger" *ngIf="!password.valid && password.touched">*You must specify password between 6 to 15 characters long</div>
-    <ion-item>
-      <ion-label>Confirm Password :</ion-label>
-      <ion-input type="password" formControlName="confirmPass"></ion-input>
-    </ion-item>
-    <div  class="danger" *ngIf="!confirmPass.valid && confirmPass.touched">*You must specify password between 6 to 15 characters long</div>
+    <div  class="danger" *ngIf="!email.valid && email.touched">*Email is required</div>
+    <!--<ion-item>-->
+      <!--<ion-label>New Password :</ion-label>-->
+      <!--<ion-input type="password" formControlName="password"></ion-input>-->
+    <!--</ion-item>-->
+    <!--<div  class="danger" *ngIf="!password.valid && password.touched">*You must specify password between 6 to 15 characters long</div>-->
+    <!--<ion-item>-->
+      <!--<ion-label>Confirm Password :</ion-label>-->
+      <!--<ion-input type="password" formControlName="confirmPass"></ion-input>-->
+    <!--</ion-item>-->
+    <!--<div  class="danger" *ngIf="!confirmPass.valid && confirmPass.touched">*You must specify password between 6 to 15 characters long</div>-->
     <br>
     <div class="changePassBtn">
-      <button ion-button color="dark">Change Password</button>
+      <button ion-button color="dark" (click)="changePassword()">Change Password</button>
       <a ion-button color="secondary" (click)="showLogin()">Login</a>
     </div>
   </form>
