session problem fixed

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -60,10 +60,10 @@
        <button ion-button (click)="editProfile()">Edit</button>
      </ion-col>
    </ion-row>
-   <ion-row text-center>
-     <ion-col col-12>
-       <button ion-button color="danger" (click)="deleteAccount()">Delete Account</button>
-     </ion-col>
-   </ion-row>
+   <!--<ion-row text-center>-->
+     <!--<ion-col col-12>-->
+       <!--<button ion-button color="danger" (click)="deleteAccount()">Delete Account</button>-->
+     <!--</ion-col>-->
+   <!--</ion-row>-->
  </ion-grid>
 </ion-content>
