--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -1,5 +1,7 @@
 <ion-content padding id="forgot">
-  <img src="assets/imgs/logo.png" class="navLogo" />
+  <p>
+    <ion-img src="assets/imgs/logo.png" class="navLogo"></ion-img>
+  </p>
   <h1> Forgot Password</h1>
   <form [formGroup]="forgotGroup">
     <ion-item>
