--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,9 @@
 
 
 <ion-content padding id="login">
-  <img src="assets/imgs/logo.png" class="navLogo" />
+  <p>
+    <ion-img src="assets/imgs/logo.png" class="navLogo"></ion-img>
+  </p>
   <h1> Welcome to Raduno</h1>
 
   <form [formGroup]="loginGroup">
