--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,7 +5,9 @@
   Ionic pages and navigation.
 -->
 <ion-content padding id="register">
-  <img src="assets/imgs/logo.png" class="navLogo" />
+  <p>
+    <ion-img src="assets/imgs/logo.png" class="navLogo"></ion-img>
+  </p>
   <h1> Account Registration</h1>
   <form [formGroup]="registerFormGroup">
     <ion-item>
