--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -2,7 +2,7 @@
 
 <ion-content padding id="editProfile">
 
-  <form>
+  <form [formGroup]="editProfileFormGroup">
     <ion-grid>
       <ion-row text-center>
         <ion-col col-12 *ngIf="picData['i'];else other_content">
@@ -17,13 +17,13 @@
       <ion-row text-center>
         <ion-col col-5>
           <div>
-            <button ion-button round outline (click)="getMedia()">Choose an image</button>
+            <button ion-button round outline (click)="getMedia()">Browse..</button>
           </div>
         </ion-col>
         <ion-col col-2></ion-col>
         <ion-col col-5>
           <div>
-            <button ion-button round outline (click)="takePic()">Take a Picture</button>
+            <button ion-button round outline (click)="takePic()">Take..</button>
           </div>
         </ion-col>
       </ion-row>
