--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -17,7 +17,7 @@
       <ion-row text-center>
         <ion-col col-5>
           <div>
-            <button ion-button round outline (click)="getMedia()">Browse..</button>
+            <button ion-button round outline (click)="getMedia()">Upload..</button>
           </div>
         </ion-col>
         <ion-col col-2></ion-col>
@@ -31,30 +31,35 @@
 
     <ion-item>
       <ion-label>Full Name :</ion-label>
-      <ion-input name="name" [(ngModel)]="editProfile.name" type="text" [value]="editProfile.name"></ion-input>
+      <ion-input formControlName="name" [(ngModel)]="editProfile.name" type="text" [value]="editProfile.name"></ion-input>
     </ion-item>
+    <div class="danger" *ngIf="!editProfileFormGroup.controls['name'].valid && editProfileFormGroup.controls['name'].touched">*Valid full name is required and max 30 characters long</div>
     <ion-item>
       <ion-label>Username :</ion-label>
-      <ion-input name="username" [(ngModel)]="editProfile.username"  type="text" [value]="editProfile.username"></ion-input>
+      <ion-input formControlName="username" [(ngModel)]="editProfile.username"  type="text" [value]="editProfile.username"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!editProfileFormGroup.controls['username'].valid && editProfileFormGroup.controls['username'].touched">*Valid  username is required and max 15 character long</div>
     <ion-item>
       <ion-label>Current Email : {{currUser.email}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>New Email :</ion-label>
-      <ion-input name="email" type="email" [(ngModel)]="newEmail" [value]="newEmail"></ion-input>
+      <ion-input formControlName="email" type="email" [(ngModel)]="newEmail" [value]="newEmail"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!editProfileFormGroup.controls['email'].valid && editProfileFormGroup.controls['email'].touched">*Valid email is required and max 35 character long</div>
     <ion-item>
       <ion-label>New Password :</ion-label>
-      <ion-input name="password" type="password" [(ngModel)]="newPassword"  [value]="newPassword"></ion-input>
+      <ion-input formControlName="password" type="password" [(ngModel)]="newPassword"  [value]="newPassword"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!editProfileFormGroup.controls['password'].valid && editProfileFormGroup.controls['password'].touched">*You must specify password between 6 to 15 characters long</div>
     <ion-item>
       <ion-label>Phone Number :</ion-label>
-      <ion-input name="phone" [(ngModel)]="editProfile.phone"  type="number" [value]="editProfile.phone"></ion-input>
+      <ion-input formControlName="phone" [(ngModel)]="editProfile.phone"  type="number" [value]="editProfile.phone"></ion-input>
     </ion-item>
+    <div  class="danger" *ngIf="!editProfileFormGroup.controls['phone'].valid && editProfileFormGroup.controls['phone'].touched">*Phone is required with valid phone format</div>
     <ion-item>
       <ion-label>Date of Birth :</ion-label>
-      <ion-input name="dob" [(ngModel)]="editProfile.dob"  [value]="editProfile.dob" type="text" [value]="editProfile.phone" readonly></ion-input>
+      <ion-input formControlName="dob" [(ngModel)]="editProfile.dob"  [value]="editProfile.dob" type="text" readonly></ion-input>
     </ion-item>
     <br>
     <div text-center class="registerBtn">
