--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -5,7 +5,7 @@
   <h1> Forgot Password</h1>
   <form [formGroup]="forgotGroup">
     <ion-item>
-      <ion-label>New Email :</ion-label>
+      <ion-label>Email :</ion-label>
       <ion-input name="email" type="email" formControlName="email"></ion-input>
     </ion-item>
     <div  class="danger" *ngIf="!email.valid && email.touched">*Email is required</div>
