--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,9 @@
-<ion-tabs selectedIndex="6">
+<ion-tabs selectedIndex="7">
   <ion-tab [root]="profileRoot" tabTitle="profile"></ion-tab>
   <ion-tab [root]="settingsRoot" tabTitle="settings"></ion-tab>
   <ion-tab [root]="feedbackRoot" tabTitle="feedback"></ion-tab>
   <ion-tab [root]="faqRoot" tabTitle="FAQs"></ion-tab>
+  <ion-tab [root]="aboutRoot" tabTitle="About Us"></ion-tab>
 
   <ion-tab [root]="shopRoot" tabTitle="Shop" tabIcon="cart"></ion-tab>
   <ion-tab [root]="budgetRoot" tabTitle="Budget" tabIcon="logo-usd"></ion-tab>
